<resources>
    <string name="app_name">xSiteMe</string>

    <string name="hint_siteTitle">Site Title</string>
    <string name="hint_siteDescription">Description </string>
    <string name="hint_emailAdress">Enter your Email</string>
    <string name="hint_password">Enter your password</string>

    <string name="button_addSite">Add Site</string>
    <string name="button_addImage"> Add Image </string>
    <string name="button_location">Set Location</string>
    <string name="button_login">Login</string>

    <string name="menu_addSite">Add</string>
    <string name="menu_map">Map</string>
    <string name="menu_cancelSite">Cancel</string>
    <string name="menu_deleteSite">Delete</string>
    <string name="menu_saveSite">Save</string>
    <string name="menu_back">Back</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_toggleFavourites">Toggle Favourites</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_site_maps">Map of all Sites</string>
    <string name="title_activity_siteList">Sites</string>
    <string name="title_activity_site_add">Add Site</string>
    <string name="title_activity_site_edit">Edit Site</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <string name="enter_site_title"> Please enter a Site Title </string>
    <string name="save_site"> Save Site </string>
    <string name="check_box_visited">visited</string>
    <string name="check_box_favourite">favourite</string>
    <string name="select_site_image">Select Site Image</string>
    <string name="change_site_image">Change Site Image</string>

    <string name="email">Email: </string>
    <string name="password">Password: </string>
    <string name="statistics">Statistics: </string>
    <string name="numberofsites">Total number of Sites: </string>
    <string name="numbervisited">Number of visted Sites: </string>
    <string name="numberfavourites">Number of Favourite Sites: </string>
    <string name="loginFailed">Login failed, please try again.</string>
    <string name="button_signup">sign up</string>
    <string name="hint_additionalNotes">Additional Notes</string>
    <string name="button_chooseFromGallery">Choose image form Gallery</string>
    <string name="button_chooseImageFromCamera">Choose image form Camera</string>

</resources>
