<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/item_add"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/menu_addSite"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/item_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/item_toggleFavourites"
            android:icon="@drawable/ic_menu_favourites"
            android:title="@string/menu_toggleFavourites"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/item_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout"
            app:showAsAction="ifRoom"/>
</menu>