<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.login.LoginView">

    <EditText
            android:id="@+id/emailAdress"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/hint_emailAdress"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:id="@+id/password"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAdress"/>

    <Button
            android:id="@+id/loginButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            app:layout_constraintTop_toBottomOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@id/password"/>

    <TextView
            android:id="@+id/loginFailed"
            android:text="@string/loginFailed"
            android:visibility="invisible"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"/>
</android.support.constraint.ConstraintLayout>