<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.site.SiteView">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <EditText
                android:id="@+id/siteTitle"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:ems="10"
                android:maxLength="40"
                android:hint="@string/hint_siteTitle"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/description"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:maxLength="140"
                android:hint="@string/hint_siteDescription"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siteTitle"/>

        <CheckBox
                android:id="@+id/checkBoxFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/check_box_favourite"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

        <CheckBox
                android:id="@+id/checkBoxVisited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/check_box_visited"
                app:layout_constraintStart_toEndOf="@id/checkBoxFavourite"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

        <TextView
                android:id="@+id/dateVisited"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                app:layout_constraintStart_toEndOf="@id/checkBoxVisited"
                app:layout_constraintTop_toBottomOf="@+id/description"/>

        <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="1"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dateVisited"/>


        <EditText
                android:id="@+id/additionalNotes"
                android:layout_width="365dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:maxLength="300"
                android:hint="@string/hint_additionalNotes"
                android:inputType="textMultiLine"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingBar"/>

        <Button
                android:id="@+id/chooseImage"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/button_addImage"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/additionalNotes"/>

        <ImageButton
                android:id="@+id/chooseImageFromCamera"
                android:contentDescription="@string/button_chooseImageFromCamera"
                android:src="@drawable/ic_site_camera"
                android:visibility="gone"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintTop_toBottomOf="@+id/additionalNotes"/>

        <ImageButton
                android:id="@+id/chooseImageFromGallery"
                android:contentDescription="@string/button_chooseFromGallery"
                android:src="@drawable/ic_site_gallery"
                android:visibility="gone"
                android:layout_width="75dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/chooseImageFromCamera"
                app:layout_constraintTop_toBottomOf="@+id/additionalNotes"/>

        <Button
                android:id="@+id/siteLocation"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/button_location"
                app:layout_constraintEnd_toEndOf="@+id/description"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/chooseImage"
                app:layout_constraintTop_toBottomOf="@+id/additionalNotes"/>

        <ImageView
                android:id="@+id/siteImage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/siteLocation"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>